# coi

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE.MIT  Makefile  README.md  baseline.bench  callgrind.out.18961  callgrind.out.30917  callgrind.out.3398  callgrind.out.378  fnv.bench  fx.bench  new.bench  rustc_hash.bench
.github/ISSUE_TEMPLATE/: bug_report.md  bug_template.md  feature_request.md  feature_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
benches/: bench.rs  deep.rs  simple.rs  threads.rs  wide.rs
coi/: Cargo.toml
coi-actix-sample/: Cargo.toml  Dockerfile
coi-actix-sample/.cargo/: config
coi-actix-sample/src/: main.rs  postgres.rs
coi-actix-sample/src/dtos/: data.rs
coi-actix-sample/src/models/: data.rs
coi-actix-sample/src/repositories/: error.rs  mod.rs  repo.rs
coi-actix-sample/src/routes/: data.rs
coi-actix-sample/src/services/: error.rs  service.rs
coi-actix-sample/xtask/: Cargo.toml
coi-actix-sample/xtask/sql/: init.sql  seed.sql
coi-actix-sample/xtask/src/: main.rs
coi-actix-web/: Cargo.toml  README.md
coi-actix-web/src/: lib.rs
coi-derive/: Cargo.toml  README.md
coi-derive/src/: attr.rs  ctxt.rs  lib.rs  provides.rs  symbol.rs
coi-test/: Cargo.toml
coi-test-debug/: Cargo.toml
coi-test-debug/tests/: cycle.rs  debug.rs  main.rs  missing_deps.rs
coi-test-no-async/: Cargo.toml
coi-test-no-async/tests/: main.rs
coi-test-no-derive/: Cargo.toml
coi-test-no-derive-async/: Cargo.toml
coi-test-no-derive-async/tests/: main.rs
coi-test-no-derive/tests/: main.rs
coi-test/src/: main.rs
coi-test/tests/: generics.rs  main.rs  multiple_providers.rs  non_inject_non_arc_field.rs  register_closure.rs  scoped.rs  unnamed_fields.rs
coi/benches/: bench.rs
coi/coi-derive/: Cargo.toml  README.md
coi/coi-derive/src/: lib.rs
coi/src/: lib.rs
coi/tests/: scoped.rs
readme-test/: Cargo.toml
readme-test/src/: lib.rs
src/: container.rs  debug.rs  lib.rs  macros.rs  provide.rs  registration.rs  resolvable.rs
