[package]
name = "coi"
version = "0.10.1"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi"
description = "coi is a Dependency Injection library."
readme = "README.md"

[dependencies]
coi-derive = { path = "coi-derive", version = "0.10.0", optional = true, default-features = false }
rustc-hash = "1.1"
petgraph = { version = "0.6.2", optional = true }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"

[features]
default = ["derive"]
derive = ["coi-derive"]
debug = ["coi-derive/debug", "petgraph"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
