[package]
name = "coi-actix-web"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
coi = { path = "../coi" }
futures = "0.3.1"
log = "0.4.8"
