[package]
name = "coi-derive"
version = "0.9.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi"
description = "coi-derive provides procedural macros for coi"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
coi = { path = "..", default-features = false }
syn = { version = "1.0", features = ["full", "extra-traits"] }

[features]
default = []
debug = []
