[package]
name = "coi-test-debug"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi"
publish = false

[dependencies]
coi = { path = "../coi", default-features = false, features = ["debug"] }
