[package]
name = "coi-test"
version = "0.1.0"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi"
readme = "../README.md"

[dependencies]
async-std = { version = "1.4.0", features = ["attributes"] }
async-trait = "0.1.22"
coi = { path = "../coi" }
