[package]
name = "coi"
version = "0.6.1"
authors = ["Paul Daniel Faria <Nashenas88@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nashenas88/coi"
description = "coi is a Dependency Injection library."
readme = "../README.md"

[dependencies]
coi-derive = { version = "0.5.0", optional = true, default-features = false }
thiserror = "1.0.10"
petgraph = { version = "0.5.0", optional = true }

[features]
default = ["derive"]
derive = ["coi-derive"]
debug = ["coi-derive/debug", "petgraph"]
